# tech-titan-engine

./: .gitignore  TechTitanEngine.sln
Builds/Editor/: layout.txt
Editor/: Editor.vcxproj  Editor.vcxproj.filters  editor.cpp  editor_main.cpp  layout.txt
Editor/x64/Debug/: Editor.exe.recipe  Editor.ilk  vc145.idb
Editor/x64/Debug/Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Editor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  compile.bat  editor.cpp  editor_main.c  level.txt  main.cpp
Engine/include/: console.h  entity.h  game.h  input.h  physics.h  settings.h
Engine/src/: console.cpp  entity.cpp  game.cpp  input.cpp  main.cpp  physics.cpp  settings.cpp
Engine/x64/Debug/: Engine.exe.recipe  Engine.ilk  vc145.idb
Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
